--- a/project_file.lpi
+++ b/project_file.lpi
@@ -59,7 +59,7 @@
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="../bin/$(TargetCPU)-$(TargetOS)/project_file.0"/>
+      <Filename Value="../bin/$(TargetCPU)-$(TargetOS)/dowsing_trainer"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
